removed temp images

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="arrow"><a href="#home-slide2" id="read-on"><i class="icon-double-angle-down"></i></a></div>
 		</div>
 		<div class="container writing" id="home-slide2">
-			<div class="overlay"><img src="images/gh6 slide 2.jpg" /></div>
+			<!-- <div class="overlay"><img src="images/gh6 slide 2.jpg" /></div> -->
 			<div class="red-box"><p>Let's warm up our pot. You place it on the stove and turn on the flame.</p></div>
 			<div class="red-connect0"><img src="images/slide2 connecter0.png" /></div>
 			<div class="red-boxTwo">
