--- a/index.html
+++ b/index.html
@@ -94,7 +94,12 @@
 			<div class="red-boxFour"><p>The ice and water are being <span>heated</span>, but they aren't being <span>warmed</span>.</p></div>
 			<div class="text-two"><p>In fact, the temperature will <span class="italic">remain</span> at 0° Celsius until <span class="bold">all the ice has melted</span>.</p></div>
 			<div class="red-boxFive"><p>It's not intuitive, but it's true.</p></div>
-			<div class="arrow"><i class="icon-double-angle-down"></i></div>
+			<div class="arrow"><a href="#home-slide3" id="read-on"><i class="icon-double-angle-down"></i></a></div>
+		</div>
+		<div class="container writing" id="home-slide3">
+			<!-- <div class="overlay"><img src="images/gh6 slide 3.jpg"></div> -->
+			<div class="globe"><img src="images/globe.jpg" /></div>
+			<div class="text-one"><p>What if the same thing were happening on earth?</p></div>
 		</div>
 		<div class="writing" id="data">
 			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, ut, voluptatum, porro cupiditate quis enim quae voluptate impedit ipsa accusantium iusto mollitia nesciunt magnam. Dolor, corporis, reiciendis, repudiandae voluptatem pariatur provident et fugiat inventore distinctio odio explicabo consectetur vitae quas officiis reprehenderit commodi saepe deserunt aperiam dignissimos nisi aliquam ipsa?</p> -->
