--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 </head>
 <body data-spy="scroll" data-offset"0" data-target="#nav-tabs" >
+	<!-- <div class="overlaymain"><img src="images/gh7 (1).jpg" /></div> -->
 	<nav class="navbar navbar-fixed-top" role="navigation">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
@@ -28,10 +29,10 @@
 		<div class="collapse navbar-collapse navbar-ex1-collapse pull-right">
 			<div class="container" id="nav-tabs">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#home">HOME</a></li>
-					<li><a href="#info">GO IN-DEPTH</a></li>
-					<li><a href="#data">GET THE DATA</a></li>
-					<li><a href="#solution">SOLUTIONS</a></li>
+					<li class="active"><a href="#">HOME</a></li>
+					<li><a href="#">GO IN-DEPTH</a></li>
+					<li><a href="#">WHAT TO DO NEXT</a></li>
+					<li><a href="#">THE TEAM</a></li>
 				</ul>
 			</div>
 		</div>
@@ -40,9 +41,9 @@
 	<div class="container" id="tabcontent">
 	<div class="tab-content">
 		<div class="active writing home-content" id="home">
-			<img src="images/latest iceberg.jpg" />
-			<h2 class="text-container">What if there were a <span>clearer</span>, more <span>profound</span> way to <span>think</span> about <span>climate change?</span></h2>
-			<div class="arrow"><a href="#home-slide1" id="read-on"><i class="arrow icon-double-angle-down"></i></a></div>
+			<!-- <img src="images/latest iceberg.jpg" /> -->
+			<div class="text-one"><p>What if there were a <span>clearer</span><span style="color: #3e3939">, </span>more <span>profound </span>way to <span>think </span>about climate change?</p></div>
+			<div class="arrow-container"><a href="#home-slide1" id="read-on"><i class="arrow icon-double-angle-down"></i></a></div>
 		</div>
 		<div class="container writing" id="home-slide1">
 			<!-- <div class="overlay"><img src="images/gh6 slide 1.jpg"></div> -->
@@ -68,7 +69,7 @@
 				<p>The <span class="red">temperature</span> will read <span class="blue">0° Celsius</span><p>
 				<p class="sidenote">(<span>Or 32° Farenheit if you're an old fart.</span>)</p>
 			</div>
-			<div class="arrow"><a href="#home-slide2" id="read-on"><i class="icon-double-angle-down"></i></a></div>
+			<div class="arrow-container"><a href="#home-slide2" id="read-on"><i class="arrow icon-double-angle-down"></i></a></div>
 		</div>
 		<div class="container writing" id="home-slide2">
 			<!-- <div class="overlay"><img src="images/gh6 slide 2.jpg" /></div> -->
@@ -94,7 +95,7 @@
 			<div class="red-boxFour"><p>The ice and water are being <span>heated</span>, but they aren't being <span>warmed</span>.</p></div>
 			<div class="text-two"><p>In fact, the temperature will <span class="italic">remain</span> at 0° Celsius until <span class="bold">all the ice has melted</span>.</p></div>
 			<div class="red-boxFive"><p>It's not intuitive, but it's true.</p></div>
-			<div class="arrow"><a href="#home-slide3" id="read-on"><i class="icon-double-angle-down"></i></a></div>
+			<div class="arrow-container"><a href="#home-slide3" id="read-on"><i class="arrow icon-double-angle-down"></i></a></div>
 		</div>
 		<div class="container writing" id="home-slide3">
 			<!-- <div class="overlay"><img src="images/gh6 slide 3.jpg"></div> -->
@@ -119,7 +120,7 @@
    			e.preventDefault();
   			$('html, body').animate({ scrollTop: $(this.hash).offset().top }, 500);
   		});
-  		$(".arrow a[href^='#']").on('click', function(e) {
+  		$(".arrow-container a[href^='#']").on('click', function(e) {
    			e.preventDefault();
   			$('html, body').animate({ scrollTop: $(this.hash).offset().top -50}, 500);
   		});
