updated for zane's birthday (temporary)

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand">Global Heating</a>
+			<a class="navbar-brand">Zane's Birthday</a>
 		</div>
 
 		<div class="collapse navbar-collapse navbar-ex1-collapse pull-right">
 			<div class="container" id="nav-tabs">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="#">HOME</a></li>
-					<li><a href="#">GO IN-DEPTH</a></li>
-					<li><a href="#">WHAT TO DO NEXT</a></li>
-					<li><a href="#">THE TEAM</a></li>
+					<li class="active"><a href="#">HAPPY</a></li>
+					<li><a href="#">BIRTHDAY</a></li>
+					<li><a href="#">ZANE</a></li>
+					<li><a href="#">!!!</a></li>
 				</ul>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 	<div class="tab-content">
 		<div class="active writing home-content" id="home">
 			<!-- <img src="images/latest iceberg.jpg" /> -->
-			<div class="text-one"><p>What if there were a <span>clearer</span><span style="color: #3e3939">, </span>more <span>profound </span>way to <span>think </span>about climate change?</p></div>
+			<div class="text-one"><p>Happy birthday <span>Zane</span><span style="color: #3e3939">, </span>you're <span>literally </span>one of the <span>best </span>people ever.</p></div>
 			<div class="arrow-container"><a href="#home-slide1" id="read-on"><i class="arrow icon-double-angle-down"></i></a></div>
 		</div>
 		<div class="container writing" id="home-slide1">
@@ -63,10 +63,10 @@
 			<div class="blue-box">
 				<p class="title">nerd tidbit</p>
 				<div class="divider"></div>
-				<p class="body">0° Celsius is the equilibrium at which water and ice coexist.</p>
+				<p class="body">only Satan thinks Zane isn't amazing, because he's actually thinking he's ama-Zane.</p>
 			</div>
 			<div class="note">
-				<p>The <span class="red">temperature</span> will read <span class="blue">0° Celsius</span><p>
+				<p>The <span class="red">temperature</span> will read <span class="blue">Zane is great.</span><p>
 				<p class="sidenote">(<span>Or 32° Farenheit if you're an old fart.</span>)</p>
 			</div>
 			<div class="arrow-container"><a href="#home-slide2" id="read-on"><i class="arrow icon-double-angle-down"></i></a></div>
@@ -77,7 +77,7 @@
 			<div class="red-connect0"><img src="images/slide2 connecter0.png" /></div>
 			<div class="red-boxTwo">
 				<p class="title">What happens?</p> 
-				<p class="body">The temperature begins to rise, right?</p>
+				<p class="body">Zane ain't amazing, right?</p>
 			</div>
 			<div class="red-arrow"><img src="images/slide2 arrow.png" /></div>
 			<div class="icepot-fire"><img src="images/icepotfire.jpg" /></div>
@@ -87,20 +87,20 @@
 				<p class="parenth" id="parenth-two">)</p>
 			</div>
 			<div class="wrong"><p>Wrong.</p></div>
-			<div class="text-one"><p>The <span class="red">thermometer</span> will <span class="italic">still read</span> <span class="blue">0° Celsius</span></p></div>
+			<div class="text-one"><p>The <span class="red">thermometer</span> will <span class="italic">still read</span> <span class="blue">Zane is great.</span></p></div>
 			<div class="red-boxThree"><p>What's going on?</p></div>
 			<div class="black-connect0"><img src="images/slide2 connecter1.png" /></div>
-			<div class="blue-box"><p>The water temperature isn't rising, but the ice is melting.</p></div>
+			<div class="blue-box"><p>You can't change the fact that Zane is amazing.</p></div>
 			<div class="black-connect1"><img src="images/slide2 connecter2.png" /></div>
 			<div class="red-boxFour"><p>The ice and water are being <span>heated</span>, but they aren't being <span>warmed</span>.</p></div>
-			<div class="text-two"><p>In fact, the temperature will <span class="italic">remain</span> at 0° Celsius until <span class="bold">all the ice has melted</span>.</p></div>
-			<div class="red-boxFive"><p>It's not intuitive, but it's true.</p></div>
+			<div class="text-two"><p>In fact, Zane will <span class="italic">remain</span> amazing <span class="bold">Zane ain't amazing no mo'</span>.</p></div>
+			<div class="red-boxFive"><p>Which will never happen.</p></div>
 			<div class="arrow-container"><a href="#home-slide3" id="read-on"><i class="arrow icon-double-angle-down"></i></a></div>
 		</div>
 		<div class="container writing" id="home-slide3">
 			<!-- <div class="overlay"><img src="images/gh6 slide 3.jpg"></div> -->
 			<div class="globe"><img src="images/globe.jpg" /></div>
-			<div class="text-one"><p>What if the same thing were happening on earth?</p></div>
+			<div class="text-one"><p>I'm pretty sure the entire world thinks Zane is amazing.</p></div>
 		</div>
 		<div class="writing" id="data">
 			<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, ut, voluptatum, porro cupiditate quis enim quae voluptate impedit ipsa accusantium iusto mollitia nesciunt magnam. Dolor, corporis, reiciendis, repudiandae voluptatem pariatur provident et fugiat inventore distinctio odio explicabo consectetur vitae quas officiis reprehenderit commodi saepe deserunt aperiam dignissimos nisi aliquam ipsa?</p> -->
